updated git link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Latest Most Greatest Naruto Game Out Right Now</h1>
             <p>This game is the brand new Naruto Striker MMORPG, we're making a HUGE effort to bring to you this wonderful ganme that is currently in Beta-testing.</p>
             
-            <a href="https://github.com/weeb2022/Anime-MMORPG" onclick="myFunction()" id="repo">Check Out Our Current Github Repository</a>
+            <a href="" onclick="myFunction()" id="repo">Check Out Our Current Github Repository</a>
         </div>
         
 
